# roughdrafts-xyz

./: .gitignore  Procfile  TODO.md  TODO_v2.md  deploy.sh  index.js  jest.config.js  manage.py  nanoid.js  notes.md  package-lock.json  package.json  prisma.js  prismaMock.js  prod.js  pyproject.toml  server.js  server.js.bak
__mocks__/: prisma.js
__tests__/: articles.test.js  authenticatedArticles.test.js  authenticatedUsers.test.js  login.test.js  users.test.js
handlers/articles/: edit.js  settings.js  view.js
handlers/login/: index.js
handlers/users/: dashboard.js  settings.js  tagsHacks.js  thoughts.js  view.js
linkis/: admin.py  apps.py  forms.py  linki.py  models.py  tests.py  urls.py  views.py
linkis/migrations/: 0001_initial.py  0002_linki_name.py
linkis/templatetags/: linki_nav.py
partials/: head.html
pastes/: admin.py  models.py  receivers.py  views.py
pastes/migrations/: 0001_initial.py  0004_paste_rendered_content.py  0005_update_renders.py  0007_paste_title.py  0015_alter_profile_url_endpoint.py  0019_remove_profile_profile_name.py  (+2 more)
prisma/: schema.prisma
roughdrafts/: asgi.py  settings.py  urls.py  wsgi.py
routes/: articles.js  login.js  users.js
templates/: index.ejs
todo_archive/: TODO_v1.md
views/: articleSettings.html  articleSettings.js  dashboard.html  edit.html  edit.js  error.html  head.js  home.html  home.js  index.js  login.html  login.js  navbar.js  new.html  profile.html  registered.html  registered.js  settings.html  userSetings.html  userSetings.js  userSettings.html  view.html  view.js  viewRaw.html  viewRaw.js
(+91 files in other folders)
